--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "version": "2.0.0",
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install",
     "start": "./bin/server.js",
     "test": "./bin/test",
     "hint": "./node_modules/jshint/bin/jshint src; echo",
