--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "jsdoc": "rm -rf docs/api && ./node_modules/jsdoc/jsdoc -c tools/jsdoc.conf.json",
     "build": "bin/build"
   },
+  "dependencies": {
+    "bower": "1.3.12"
+  },
   "devDependencies": {
-    "bower": "~1.3.8",
     "jshint": "~1.1.0",
     "jsdoc": "git://github.com/jsdoc3/jsdoc.git",
     "mocha-phantomjs": "3.1.6",
