--- a/package.json
+++ b/package.json
@@ -16,34 +16,27 @@
     "type": "git",
     "url": "https://github.com/Livefyre/livefyre-bootstrap.git"
   },
-  "version": "1.4.19",
+  "version": "1.4.18",
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install",
     "start": "./bin/server.js",
     "test": "./bin/test",
-    "hint": "./node_modules/.bin/lfeslint",
+    "hint": "./node_modules/jshint/bin/jshint src; echo",
     "lessc": "./node_modules/less/bin/lessc -ru --include-path=lib/ --compress src/styles/all.less dist/all.css",
     "jsdoc": "rm -rf docs/api && ./node_modules/jsdoc/jsdoc -c tools/jsdoc.conf.json",
     "build": "bin/build"
   },
   "devDependencies": {
     "bower": "~1.3.8",
-    "express": "~3.4.7",
-    "http-server": "~0.6",
+    "jshint": "~1.1.0",
     "jsdoc": "git://github.com/jsdoc3/jsdoc.git",
-    "less": "1.7.0",
-    "less-middleware": "~0.1.14",
-    "lfcdn": "git+ssh://git@github.com:Livefyre/lfcdn",
-    "lfeslint": "git+ssh://git@github.com/Livefyre/lfeslint.git",
     "mocha-phantomjs": "3.1.6",
     "phantomjs": "1.9.2-2",
-    "portfinder": "~0.2.1"
-  },
-  "lfeslint": {
-    "ignore": [
-      "lib/*",
-      "r.js",
-      "tools/*"
-    ]
+    "lfcdn": "git+ssh://git@github.com:Livefyre/lfcdn",
+    "less": "1.7.0",
+    "portfinder": "~0.2.1",
+    "express": "~3.4.7",
+    "less-middleware": "~0.1.14",
+    "http-server": "~0.6"
   }
 }
