--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "type": "git",
     "url": "https://github.com/Livefyre/livefyre-bootstrap.git"
   },
-  "version": "1.5.1",
+  "version": "1.5.2",
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "./node_modules/bower/bin/bower install && chmod 755 ./node_modules/less/bin/lessc",
     "start": "./bin/server.js",
     "test": "./bin/test",
     "hint": "./node_modules/.bin/lfeslint",
