--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "https://github.com/Livefyre/livefyre-bootstrap.git"
   },
-  "version": "1.5.5",
+  "version": "1.5.6",
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install",
     "start": "./bin/server.js",
@@ -26,8 +26,10 @@
     "jsdoc": "rm -rf docs/api && ./node_modules/jsdoc/jsdoc -c tools/jsdoc.conf.json",
     "build": "bin/build"
   },
+  "dependencies": {
+    "bower": "1.3.8"
+  },
   "devDependencies": {
-    "bower": "~1.3.8",
     "express": "~3.4.7",
     "http-server": "~0.6",
     "jsdoc": "git://github.com/jsdoc3/jsdoc.git",
