--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "version": "1.5.6",
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install",
     "start": "./bin/server.js",
     "test": "./bin/test",
     "hint": "./node_modules/.bin/lfeslint",
