--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bower": "~1.3.8",
     "express": "~3.4.7",
     "http-server": "~0.6",
-    "jsdoc": "git://github.com/jsdoc3/jsdoc.git",
+    "jsdoc": "3.6.3",
     "less": "1.7.0",
     "less-middleware": "~0.1.14",
     "lfcdn": "git+ssh://git@github.com:Livefyre/lfcdn",
